--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+        integrity="sha256-a9JO7L1jGkja9va1xGMWEJspCfU/b9Vn5u/O5MdnKhw=" crossorigin="anonymous" />
 <link rel="stylesheet" href="./css/styles.css">
 
     
@@ -17,7 +19,9 @@
 <body>
     <header class="site-header">
         <div class="container">
-<a class="logo" href="./portfolio.html"><span class="logo-one">Web</span><span class="logo">Studio</span></a>
+<a href="./index.html" class="logo"><span class="logo__accent">Web</span>Studio</a>
+
+
         <nav class="site-nav">
         
             <ul class="list">
@@ -29,10 +33,10 @@
         </nav>
         <ul class="auth-nav">
             <li class="item">
-                <a class="link" href="mailto:info@devstudio.com"><svg class="icon icon-envelope" height="12" width="16">
+                <a class="link" href="mailto:info@devstudio.com"><svg class="icon"  height="12" width="16">
                 <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a></li>
-            <li class="item"><a class="link" href="tel:+380961111111"><svg class="icon icon-smartphone" height="16" width="10">
+            <li class="item"><a class="link" href="tel:+380961111111"><svg class="icon" height="16" width="10">
                 <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>+38 096 111 11 11</a></li>
         </ul>
@@ -112,6 +116,36 @@
                     <div class="description">
                     <h3 class="section-items">Ігор Дем'яненко</h3>
                     <p lang="en" class="section-desc">Product Designer</p>
+                <ul class="team-cards__social-links social-links">
+                    <li class="social-links__item">
+                        <a href="" class="social-links__link">
+                            <svg class="social-links__icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links__item">
+                        <a href="" class="social-links__link">
+                            <svg class="social-links__icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links__item">
+                        <a href="" class="social-links__link">
+                            <svg class="social-links__icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-links__item">
+                        <a href="" class="social-links__link">
+                            <svg class="social-links__icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
                     </div>
                 </li>
                 <li class="item">
@@ -119,6 +153,36 @@
                     <div class="description">
                     <h3 class="section-items">Ольга Рєпіна</h3>
                     <p lang="en" class="section-desc">Frontend Developer</p>
+                    <ul class="team-cards__social-links social-links">
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="item">
@@ -126,6 +190,36 @@
                     <div class="description">
                     <h3 class="section-items">Микола Тарасов</h3>
                     <p lang="en" class="section-desc">Marketing</p>
+                    <ul class="team-cards__social-links social-links">
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="item">
@@ -133,23 +227,111 @@
                     <div class="description">
                     <h3 class="section-items">Михайло Єрмаков</h3>
                     <p lang="en" class="section-desc">Marketing</p>
+                    <ul class="team-cards__social-links social-links">
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="" class="social-links__link">
+                                <svg class="social-links__icon" height="20" width="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
             </ul>
             </div>
         </section>
+        <section class="clients section">
+            <div class="container">
+                <h2 class="clients__heading heading">Постійні клієнти</h2>
+                <ul class="clients__list">
+                    <li class="clients__item">
+                        <a href="" class="clients__link">
+                            <svg class="clients__icon" height="60" width="106">
+                                <use href="./images/icons.svg#icon-client1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients__item">
+                        <a href="" class="clients__link">
+                            <svg class="clients__icon" height="60" width="106">
+                                <use href="./images/icons.svg#icon-client2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients__item">
+                        <a href="" class="clients__link">
+                            <svg class="clients__icon" height="60" width="106">
+                                <use href="./images/icons.svg#icon-client3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients__item">
+                        <a href="" class="clients__link">
+                            <svg class="clients__icon" height="60" width="106">
+                                <use href="./images/icons.svg#icon-client4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients__item">
+                        <a href="" class="clients__link">
+                            <svg class="clients__icon" height="60" width="106">
+                                <use href="./images/icons.svg#icon-client5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients__item">
+                        <a href="" class="clients__link">
+                            <svg class="clients__icon" height="60" width="106">
+                                <use href="./images/icons.svg#icon-client6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
-    <footer class="site-footer">
-        <div class="container">
-        <a href="./portfolio.html"><span class="logo-one">Web</span><span class="logo-secondary">Studio</span></a>
-        <address class="footer-contacts">
-            <ul class="address">
-                <li class="item"><a class="address link" href="https://goo.gl/maps/XUFfffDGWBc9zeDt5" >м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li class="item"><a class="address link-one" href="mailto:info@devstudio.com" > info@devstudio.com</a></li>
-                <li class="item"><a class="address link-one" href="tel:+380961111111" > +38 096 111 11 11</a></li>
-            </ul>
-        </address>
+<footer class="site-footer">
+    <div class="site-footer__container container">
+        <div class="site-footer__nav-links">
+            <a href="./index.html" class="logo site-footer__logo"><span class="logo__accent">Web</span>Studio</a>
+            <address class="footer-contacts">
+                <ul>
+                    <li class="footer-contacts__item">
+                        <a class="footer-contacts__link footer-contacts__link--address"
+                            href="https://goo.gl/maps/XUFfffDGWBc9zeDt5">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <a class="footer-contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <a class="footer-contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
+
         <div class="site-footer__social-links">
             <h2 class="site-footer__heading">Приєднуйтесь</h2>
             <ul class="site-footer__social-list social-links">
@@ -183,7 +365,8 @@
                 </li>
             </ul>
         </div>
-    </footer>
+    </div>
+</footer>
 </body>
 
 </html>
