--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,16 @@
     <title>Document</title>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+        integrity="sha256-a9JO7L1jGkja9va1xGMWEJspCfU/b9Vn5u/O5MdnKhw=" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="site-header">
         <div class="container">
-            <a class="logo" href="./portfolio.html"><span class="logo-one">Web</span><span class="logo">Studio</span></a>
+            <a href="./index.html" class="logo"><span class="logo__accent">Web</span>Studio</a>
+
             <nav class="site-nav">
     
                 <ul class="list">
@@ -25,8 +28,14 @@
         </nav>
         
         <ul class="auth-nav">
-            <li class="item"><a  class="link" href="">info@devstudio.com</a></li>
-            <li class="item"><a  class="link" href="">+38 096 111 11 11</a></li>
+            <li class="item">
+                <a class="link" href="mailto:info@devstudio.com"><svg class="icon" height="12" width="16">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>info@devstudio.com</a>
+            </li>
+            <li class="item"><a class="link" href="tel:+380961111111"><svg class="icon" height="16" width="10">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
         </ul>
     </div>
     </header>
@@ -49,7 +58,7 @@
         <a class="link" href="">
         <img  class="image-block" src="./images/img8.jpg" alt="Технокряк" width="370">
         <div class="description">
-        <h2 class="heading">Технокряк</h2>
+        <h2 class="heading-car">Технокряк</h2>
         <p class="text">Веб-сайт</p>
         </div>
         </a>
@@ -58,7 +67,7 @@
         <a class="link" href="" >
         <img  class="image-block" src="./images/img9.jpg" alt="Постер New Orlean vs Golden Star" width="370">
         <div class="description">
-    <h2 class="heading">Постер New Orlean vs Golden Star</h2>
+    <h2 class="heading-car">Постер New Orlean vs Golden Star</h2>
     <p class="text">Дизайн</p>
     </div>
     </a>
@@ -67,7 +76,7 @@
 <a class="link" href="" >
 <img class="image-block" src="./images/img10.jpg" alt="Ресторан Seafood" width="370">
 <div class="description">
-<h2 class="heading">Ресторан Seafood</h2>
+<h2 class="heading-car">Ресторан Seafood</h2>
 <p class="text">Додаток</p>
 </div>
 </a>
@@ -76,7 +85,7 @@
     <a  class="link" href="">
     <img  class="image-block" src="./images/img11.jpg" alt="Проєкт Prime" width="370">
     <div class="description">
-    <h2 class="heading">Проєкт Prime</h2>
+    <h2 class="heading-car">Проєкт Prime</h2>
     <p class="text">Маркетинг</p>
     </div>
     </a>
@@ -85,7 +94,7 @@
         <a class="link" href="" >
     <img class="image-block" src="./images/img12.jpg" alt="Проєкт Boxes" width="370">
     <div class="description">
-    <h2 class="heading">Проєкт Boxes</h2>
+    <h2 class="heading0-car">Проєкт Boxes</h2>
     <p class="text">Додаток</p>
     </div>
     </a>
@@ -94,7 +103,7 @@
         <a  class="link" href="" >
         <img class="image-block" src="./images/img13.jpg" alt="Inspiration has no Borders" width="370">
         <div class="description">
-        <h2 class="heading">ПInspiration has no Borders</h2>
+        <h2 class="heading-car">ПInspiration has no Borders</h2>
         <p class="text">Веб-сайт</p>
         </div>
         </a>
@@ -103,7 +112,7 @@
         <a class="link" href="" >
         <img  class="image-block" src="./images/img14.jpg" alt="Видання Limited Edition" width="370">
         <div class="description">
-        <h2 class="heading">Видання Limited Edition</h2>
+        <h2 class="heading-car">Видання Limited Edition</h2>
         <p class="text">Дизайн</p>
         </div>
         </a>
@@ -112,7 +121,7 @@
         <a class="link" href="" >
         <img class="image-block" src="./images/img15.jpg" alt="Проєкт LAB" width="370">
         <div class="description">
-        <h2 class="heading">Проєкт LAB</h2>
+        <h2 class="heading-car">Проєкт LAB</h2>
         <p class="text">Маркетинг</p>
         </div>
         </a>
@@ -121,7 +130,7 @@
     <a class="link" href="">
     <img class="image-block" src="./images/img16.jpg" alt="Growing Business" width="370">
     <div class="description">
-    <h2 class="heading">Growing Business</h2>
+    <h2 class="heading-car">Growing Business</h2>
     <p class="text">Додаток</p>
     </div>
     </a>
@@ -131,17 +140,58 @@
 </section>
     </main>
 <footer class="site-footer">
-    <div class="container">
-        <a href="./portfolio.html"><span class="logo-one">Web</span><span class="logo-secondary">Studio</span></a>
-        <address class="footer-contacts">
-            <ul class="address">
-                <li class="item"><a class="address link" href="https://goo.gl/maps/XUFfffDGWBc9zeDt5">м. Київ, пр-т Лесі
-                        Українки, 26</a></li>
-                <li class="item"><a class="address link-one" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+    <div class="site-footer__container container">
+        <div class="site-footer__nav-links">
+            <a href="./index.html" class="logo site-footer__logo"><span class="logo__accent">Web</span>Studio</a>
+            <address class="footer-contacts">
+                <ul>
+                    <li class="footer-contacts__item">
+                        <a class="footer-contacts__link footer-contacts__link--address"
+                            href="https://goo.gl/maps/XUFfffDGWBc9zeDt5">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <a class="footer-contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-contacts__item">
+                        <a class="footer-contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+
+        <div class="site-footer__social-links">
+            <h2 class="site-footer__heading">Приєднуйтесь</h2>
+            <ul class="site-footer__social-list social-links">
+                <li class="social-links__item">
+                    <a href="" class="site-footer__social-link social-links__link">
+                        <svg class="social-links__icon" height="20" width="20">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
                 </li>
-                <li class="item"><a class="address link-one" href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                <li class="social-links__item">
+                    <a href="" class="site-footer__social-link social-links__link">
+                        <svg class="social-links__icon" height="20" width="20">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-links__item">
+                    <a href="" class="site-footer__social-link social-links__link">
+                        <svg class="social-links__icon" height="20" width="20">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-links__item">
+                    <a href="" class="site-footer__social-link social-links__link">
+                        <svg class="social-links__icon" height="20" width="20">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
             </ul>
-        </address>
+        </div>
     </div>
 </footer>
 </body>
