--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
         <a class="link" href="" >
     <img class="image-block" src="./images/img12.jpg" alt="Проєкт Boxes" width="370">
     <div class="description">
-    <h2 class="heading0-car">Проєкт Boxes</h2>
+    <h2 class="heading-car">Проєкт Boxes</h2>
     <p class="text">Додаток</p>
     </div>
     </a>
