--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 
 
 <ul class="portfolio-filter text-center">
-    <li class="item"><button type="button" class="button-secondary">Усі</button></li>
+    <li class="item"><button type="button" class="button-work">Усі</button></li>
     <li class="item"><button type="button" class="button-work">Веб-сайти</button></li>
     <li class="item"><button type="button" class="button-work">Додатки</button></li>
     <li class="item"><button type="button" class="button-work">Дизайн</button></li>
