--- a/index.html
+++ b/index.html
@@ -266,21 +266,16 @@
                 </ul>
             </div>
         </section>
-        <div class="container">
-            <section class="customer">
-                <p class="customer_title">Постійні клієнти</p>
+       
+            <section class="customer section">
+                <div class="container">
+                <h2 class="customer_title">Постійні клієнти</h2>
                 <ul class="customer_content list">
                     <li class="customer__item">
                         <a href="" class="customer__link">
                             <svg class="clients__icon" height="60" width="106">
                                 <use href="./images/icons.svg#icon-client1"></use>
-                            </svg>
-
-                            <!-- <img
-                          src="./images/logo1.svg"
-                          alt="Лого 1"
-                          class="customer_image"
-                      /> -->
+                            </svg>                    
                         </a>
                     </li>
                     <li class="customer__item">
@@ -288,11 +283,6 @@
                             <svg class="clients__icon" height="60" width="106">
                                 <use href="./images/icons.svg#icon-client2"></use>
                             </svg>
-                            <!-- <img
-                          src="./images/logo2.svg"
-                          alt="Лого 2"
-                          class="customer_image"
-                      /> -->
                         </a>
                     </li>
                     <li class="customer__item">
@@ -300,11 +290,6 @@
                             <svg class="clients__icon" height="60" width="106">
                                 <use href="./images/icons.svg#icon-client3"></use>
                             </svg>
-                            <!-- <img
-                          src="./images/logo3.svg"
-                          alt="Лого 3"
-                          class="customer_image"
-                      />   -->
                         </a>
                     </li>
                     <li class="customer__item">
@@ -312,11 +297,6 @@
                             <svg class="clients__icon" height="60" width="106">
                                 <use href="./images/icons.svg#icon-client4"></use>
                             </svg>
-                            <!-- <img
-                          src="./images/logo4.svg"
-                          alt="Лого 4"
-                          class="customer_image"
-                      />   -->
                         </a>
                     </li>
                     <li class="customer__item">
@@ -324,11 +304,6 @@
                             <svg class="clients__icon" height="60" width="106">
                                 <use href="./images/icons.svg#icon-client5"></use>
                             </svg>
-                            <!-- <img
-                          src="./images/logo5.svg"
-                          alt="Лого 5"
-                          class="customer_image"
-                      />   -->
                         </a>
                     </li>
                     <li class="customer__item">
@@ -336,16 +311,12 @@
                             <svg class="clients__icon" height="60" width="106">
                                 <use href="./images/icons.svg#icon-client6"></use>
                             </svg>
-                            <!-- <img
-                          src="./images/logo6.svg"
-                          alt="Лого 6"
-                          class="customer_image"
-                      />   -->
                         </a>
                     </li>
                 </ul>
+                </div>
             </section>
-        </div>
+      
     </main>
 
     <footer class="site-footer">
