--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
         </div>
 
         <div class="site-footer__social-links">
-            <h2 class="site-footer__heading">Приєднуйтесь</h2>
+            <p class="site-footer__heading">Приєднуйтесь</p>
             <ul class="site-footer__social-list social-links">
                 <li class="social-links__item">
                     <a href="" class="site-footer__social-link social-links__link">
